--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -8,7 +8,8 @@
 \label{cha:chap03}
 
 \section{引言}
-深度学习方法组合低阶特征提取更加抽象、复杂的高阶特征，具有高效的特征学习能力，因而取代了传统的影像分类方法，成为当前遥感影像分类领域的主要研究方法。第~\ref{cha:chap02} 章概述了深度学习领域内重要的几个网络模型，并详细介绍了基于FCN 的遥感影像分类方法的结构和原理。一方面，FCN 中的卷积结构能自动学习输入图像的潜在特征；另一方面，FCN 反卷积结构将特征图恢复到原始图像尺寸，实现遥感影像的像素级分类。然而，FCN 模型上采样过程造成了特征信息的损失，导致网络预测地物边界模糊问题。此外，高分影像细节特征复杂且FCN 分割方法是影像像素点级的分类，使得预测结果中同类地物内部像素点难以保持类别一致性。进一步加剧了影像分类中地物边界模糊、歧义性等问题。
+%深度学习方法
+DL 模型组合低阶特征提取更加抽象、复杂的高阶特征，具有高效的特征学习能力，因而取代了传统的影像分类方法，成为当前遥感影像分类领域的主要研究方法。第~\ref{cha:chap02} 章概述了深度学习领域内重要的几个网络模型，并详细介绍了基于FCN 的遥感影像分类方法的结构和原理。一方面，FCN 中的卷积结构能自动学习输入图像的潜在特征；另一方面，FCN 反卷积结构将特征图恢复到原始图像尺寸，实现遥感影像的像素级分类。然而，FCN 模型上采样过程造成了特征信息的损失，导致网络预测地物边界模糊问题。此外，高分影像细节特征复杂且FCN 分割方法是影像像素点级的分类，使得预测结果中同类地物内部像素点难以保持类别一致性。进一步加剧了影像分类中地物边界模糊、歧义性等问题。
 
 
 第~\ref{sec:chap02-3} 节介绍的GAN 模型是一个优秀的生成模型，其生成器和判别器不断对抗博弈，收敛时的GAN 模型生成器有强大的数据建模能力，判别器则会检测并纠正真实样本与生成数据之间的差异，保证整体的一致性。本章将对抗网络训练的思想引入到FCN 模型中，将FCN 模型像素级多分类交叉熵损失与GAN 对抗目标代价结合。对抗博弈中将促使分割模型生成的地物分类标签和真实地物Ground truth 图难以被判别器区分，从而提升同类地物内像素点类别的一致性。此外，对抗损失作用于整个影像数据，使得在几乎不增加模型复杂度的前提下提升影像远距离像素点间类别标签的连续性。
@@ -22,7 +23,7 @@
 
 \subsection{算法原理}
 \label{subsec:firtst-1}
-基于CGAN 的影像分类方法模型主要包含两个部分：生成网络的影像分割模型和对抗训练阶段的判别模型。整个模型结构如图\ref{fig:gan-fcn} 所示，左边是生成网络，是FCN 分割模型，其卷积特征提取结构使用VGGNet 16\cite{simonyan2014very}的卷积结构，由五个卷积块堆叠而成，每个卷积块包含$2/3$个卷积层和$1$ 个最大池化层；分割模型的特征图恢复部分为$4$ 个反卷积的上采样结构，每个上采样模块中包含一次反卷积操作，将特征图尺寸放大两倍；最后通过一个$1\times 1$的卷积结构将特征图通道数降为1，生成影像分割结果。右边是判别网络，判别网络是一个二元CNN 分类模型，其输入存在两种情况：一种是原始影像和Ground truth 图拼接输入，另一种是原始影像与分割模型生成结果拼接输入。判别网络结构由两个卷积结构和两个全连接层堆叠，最后通过Sigmoid 激活函数判别当前输入样本来源，输出为一个二元分类值（输出为1代表它判断输入是第一种情况，输出为0代表它判断输入是第二种情况）。
+基于CGAN 的影像分类方法模型主要包含两个部分：生成网络的影像分割模型和对抗训练阶段的判别模型。整个模型结构如图\ref{fig:gan-fcn} 所示，左边是生成网络，是FCN 分割模型，其卷积特征提取结构使用VGGNet 16\cite{simonyan2014very}前五层的卷积结构，由五个卷积块堆叠而成，每个卷积块包含$2/3$个卷积层和$1$ 个最大池化层；分割模型的特征图恢复部分为$4$ 个反卷积的上采样结构，每个上采样模块中包含一次反卷积操作，将特征图尺寸放大两倍；最后通过一个$1\times 1$的卷积结构将特征图通道数降为1，生成影像分割结果。右边是判别网络，判别网络是一个二元CNN 分类模型，其输入存在两种情况：一种是原始影像和Ground truth 图拼接输入，另一种是原始影像与分割模型生成结果拼接输入。判别网络结构由两个卷积结构和两个全连接层堆叠，最后通过Sigmoid 激活函数判别当前输入样本来源，输出为一个二元分类值（输出为1代表它判断输入是第一种情况，输出为0代表它判断输入是第二种情况）。
 
 \begin{figure}[htb]
   \centering
@@ -57,7 +58,8 @@
 \end{equation}
 式中$\theta_g$ 和$\theta_d$ 分别代表分割模型和判别模型网络参数，右式中第一项为分割模型的交叉熵损失，第二项为对抗网络中样本判别损失代价函数，$\lambda$ 为生成阶段与对抗阶段代价权衡常数且有$\lambda > 0$。模型训练时我们需要最小化式\ref{eq:4-7} 中的代价函数，从而迭代求解得到网络参数$\theta_g$ 和$\theta_d$。
 
-当模型迭代收敛后，模型中的权值参数均得以确定，此时模型中生成网络部分已经具有优秀的图像分割识别能力。通过前向传播，利用最终分割模型对待分类测试影像求解每个像素属于各个类别的概率值，像素点所属类别概率值求采用式\ref{eq:4-6} 中Softmax 函数求解，再利用argmax 函数求出最大概率值对应类别标签维度，即为当前像素的类别标签，影像$x$ 上任一像素点$i$ 所属类别标签$C_k$ 的计算方式如式\ref{eq:4-8}。
+% 通过前向传播，利用最终分割模型对待分类测试影像求解每个像素属于各个类别的概率值
+当模型迭代收敛后，模型中的权值参数均得以确定，此时模型中生成网络部分已经具有优秀的图像分割识别能力。利用分割模型输出测试影像各像素点的类别概率，像素点所属类别概率值求采用式\ref{eq:4-6} 中Softmax 函数求解，接着根据argmax 函数计算像素点最大概率值对应类别维度，即为当前预测点的分类标签，影像$x$ 上任一像素点$i$ 所属类别标签$C_k$ 的计算方式如式\ref{eq:4-8}。
 \begin{equation}
   \label{eq:4-8}
   C_k = \mathop{\arg\max}_{k \in K} p_k(x^{(i)}), \ k=1,2,\cdots,K
@@ -78,7 +80,7 @@
       生成样本;
 
    \textbf{模型训练：}
-    \State 预训练VGGNet16 模型权值初始化生成模型，判别器步数 $k= 1$，权衡因子$\lambda$, 初始学习率$\alpha$, Adam 动量 $\beta_1,\beta_2$。
+    \State VGGNet16 前五层权值初始化生成模型，判别器步数 $k= 1$，权衡因子$\lambda$, 初始学习率$\alpha$, Adam 动量 $\beta_1,\beta_2$。
     \For{模型迭代epoch 数}
         \State \textbf{判别器：}
         \For{$k$ 步 }
@@ -182,7 +184,7 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
   \caption{图像裁剪方式}\label{fig:sample_data}
 \end{figure}
 
-常用图像裁剪方式有规则网格选取、滑动窗口裁剪和随机选取。规则网格选取是使用大小为$256 \times 256$ 的网格切分影像，这种划分方式得到的样本量有限。滑动窗口裁剪方法是使用$256 \times 256$ 的滑动窗口以一定的滑动间隔在原始影像上滑动得到训练样本，滑动窗口样本受滑动间隔尺度影像，滑动间隔小得到的冗余影像过多，滑动间隔大则会丢失影像许多特征信息。随机选取则是使用$256 \times 256$ 的裁剪窗口在原始影像上裁切获得样本。这种方法灵活便捷，能够有效利用遥感影像的信息，且裁剪出大量的训练样本。三种裁剪方式如图\ref{fig:sample_data} 所示。
+常用图像裁剪方式有规则网格选取、滑动窗口裁剪和随机选取。规则网格选取是使用大小为$256 \times 256$ 的网格切分影像，这种划分方式得到的样本量有限。滑动窗口裁剪方法以特定的移动间隔在原始影像上剪裁得到训练样本。文中采用滑动窗口尺寸为$256 \times 256$，滑动窗口样本受滑动间隔尺度影像，滑动间隔小得到的冗余影像过多，滑动间隔大则会丢失影像许多特征信息。随机选取则是使用$256 \times 256$ 的裁剪窗口在原始影像上裁切获得样本。这种方法灵活便捷，能够有效利用遥感影像的信息，且裁剪出大量的训练样本。三种裁剪方式如图\ref{fig:sample_data} 所示。
 
 本文实验中训练样本采用随机裁剪选取方式获得，测试样本采用规则网格选取方式获得。获取裁剪样本时也对同一区域的DSM、Ground truth 图数据进行裁切，保证输入数据与类别标签的一致性。
 
